update-hello-client-page

--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -7,7 +7,7 @@
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="phonenumber">ເບີໂທລະສັບ*</label>
                 <input name="phone" [ngModel]='_currentUserdetail.phonenumber' placeholder="ກະລຸນາໃສ່ເບີໂທຂອງທ່ານ" class="form-control input-md langlao" required>
 
-                <label class="ml-4 mt-3 langlao smoke-font-color" for="forgotkeys">ລະຫັດຜ່ານທີ່ທ່ານໃດ້ຮັບ*</label>
+                <label class="ml-4 mt-3 langlao smoke-font-color" for="forgotkeys">ປ້ອນລະຫັດຜ່ານທີ່ທ່ານໃດ້ຮັບ*</label>
                 <input [value]="_currentUserdetail.forgot===undefined?'':_currentUserdetail.forgot" (input)="_currentUserdetail.forgot=$event.target.value" (keyup)="checkForgot($event)" name="forgotkeys" type="text" placeholder="forgot keys" class="form-control input-md"
                     required>
                 <button class="btn btn-outline-secondary mt-3 langlao" (click)="getForgotKeys()">ຂໍລະຫັດ</button>
