--- a/src/app/all-menu/all-menu.component.css
+++ b/src/app/all-menu/all-menu.component.css
@@ -9,6 +9,9 @@
 .cursor {
     cursor: pointer;
     height: 180px;
+    border: 10px solid;
+    border-color: rgb(212, 198, 198);
+    border-radius: 30px 0px 50px 0px;
 }
 
 .font-size-items:hover {
