--- a/src/app/all-menu/all-menu.component.html
+++ b/src/app/all-menu/all-menu.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <br>
+    <h3 class="text-center display-7 mb-4">Pay Cheap <i class="fas fa-leaf" id="register-color-icon"></i></h3>
+    <h1 class=" langlao display-5 text-center mb-3">ລະບົບເຕີມເງິນອອນລາຍ</h1>
     <div class="row">
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/hometopup']">
