--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="col-2">
-        <a [routerLink]="['/all-menu']"><img class="m-auto" src="../../assets/logo/Paycheaplogo-header.png" alt="" style="height:66px;"></a>
+        <a [routerLink]="['/all-menu']"><img class="mr-auto" src="../../assets/logo/Paycheaplogo-header.png" alt="" style="height:66px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="collapse_target" [routerLink]="['/all-menu']">
         <div class="col-8">
@@ -39,7 +39,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                             <button class="dropdown-item" type="button" id="head-drop-font" [routerLink]="['/login']"><i class="fas fa-user"></i> Sign In</button>
                             <button class="dropdown-item" type="button" id="head-drop-font" [routerLink]="['/register']"><i class="far fa-registered"></i> Register</button>
-                            <button class="dropdown-item" type="button" id="head-drop-font" (click)="logout()"><i class="far fa-registered"></i> Logout</button>
+                            <button class="dropdown-item" type="button" id="head-drop-font" (click)="logout()"><i class="fas fa-level-down-alt"></i> Logout</button>
                             <hr>
                             <button class="dropdown-item" type="button" id="head-drop-font"><i class="far fa-address-book"></i> For Admin</button>
                         </div>
