--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -22,7 +22,7 @@
                     required>
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="btnGetSecret"></label>
                 <button (click)="getSecret()" name="btnGetSecret" class="btn btn-info mt-3">get secret</button>
-                <button (click)='register()' name="submit" class="btn main-bg-color btn-block langlao">ລົງທະບຽນ</button>
+                <button (click)='register()' name="submit" class="btn main-bg-color btn-block mt-3 langlao">ລົງທະບຽນ</button>
                 <button (click)="get_user_gui()" class="btn main-bg-color btn-block">Get GUI</button>
                 <br><br>
                 <h5 class="text-center langlao display-6">----- ຂ້ອຍມີບັນຊີແລ້ວ -----</h5>
