--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,17 +4,17 @@
     <h1 class=" langlao display-5 text-center mb-3">ລະບົບເຕີມເງິນອອນລາຍ</h1>
     <div class="row d-flex justify-content-between">
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
-            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/hometopup']">
+            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/login']">
                 <a id="padding-item" class="nav-link main-bg-color text-center "><i class="fas fa-user"></i> Sign In</a>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
-            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/ubalance'] ">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-registered"></i> Register</i>
+            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/register'] ">
+                <i id="padding-item " class="nav-link main-bg-color text-center"><i class="far fa-registered"></i> Register</i>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
-            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" (click)="getUserDetails()" [routerLink]="[ '/user-info']">
+            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/forgotpassword']">
                 <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-key" id="font-item"></i><br>Forgot-Password</i>
             </div>
         </div>
