Update change-phone and some functions

--- a/src/app/all-menu/all-menu.component.html
+++ b/src/app/all-menu/all-menu.component.html
@@ -62,6 +62,11 @@
                 <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fab fa-expeditedssl" id="font-item"></i><br><i>Change-Password</i></i>
             </div>
         </div>
+        <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
+            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/change-phone']">
+                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-mobile-alt" id="font-item"></i><br><i>Change-Phone</i></i>
+            </div>
+        </div>
     </div>
 </div>
 
