--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -5,7 +5,7 @@
             <h1 class=" langlao display-5 text-center mb-3">ລືມລະຫັດຜ່ານ</h1>
             <form action="">
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="phonenumber">ເບີໂທລະສັບ*</label>
-                <input name="phone" [ngModel]='_currentUserdetail.phonenumber' placeholder="ກະລຸນາໃສ່ເບີໂທຂອງທ່ານ" class="form-control input-md langlao" required>
+                <input name="phone" [ngModel]='_currentUserdetail.phonenumber' (ngModelChange)="_currentUserdetail.phonenumber = $event" placeholder="ກະລຸນາໃສ່ເບີໂທຂອງທ່ານ" class="form-control input-md langlao" required>
 
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="forgotkeys">ປ້ອນລະຫັດຜ່ານທີ່ທ່ານໃດ້ຮັບ*</label>
                 <input [value]="_currentUserdetail.forgot===undefined?'':_currentUserdetail.forgot" (input)="_currentUserdetail.forgot=$event.target.value" (keyup)="checkForgot($event)" name="forgotkeys" type="text" placeholder="forgot keys" class="form-control input-md"
