update all typescript component

--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -13,8 +13,8 @@
                     required>
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="phone">ເບີໂທລະສັບ*</label>
                 <input name="phone" (value)="_currentUserdetail===undefined? '' : _currentUserdetail.phonenumber" (input)="_currentUserdetail.phonenumber=$event.target.value" type="number" placeholder="phonenumber" class="form-control input-md" required>
-                <label class="ml-4 mt-3 langlao smoke-font-color" for="btnChangePassword"></label>
-                <button name="btnChangePassword" (click)='changepassword()' class="btn main-bg-color langlao mt-3" style="width:100%">ສຳເລັບ</button>
+                <label class="ml-4 mt-3 langlao smoke-font-color" for="changePassword"></label>
+                <button name="changePassword" (click)='changepassword()' class="btn main-bg-color langlao mt-3" style="width:100%">ສຳເລັບ</button>
             </form>
         </div>
     </div>
