--- a/src/app/all-menu/all-menu.component.html
+++ b/src/app/all-menu/all-menu.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
-            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" (click)="getUserDetails()" [routerLink]="[ '/user-info']">
+            <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/user-info']">
                 <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-user-circle"></i><br><i>User-info</i></i>
             </div>
         </div>
