--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <br>
     <h3 class="text-center display-7 mb-4">Pay Cheap <i class="fas fa-leaf" id="register-color-icon"></i></h3>
-    <h2 class=" langlao display-5 text-center mb-3">ລະຫັດໃໝ່ຂອງທ່ານແມ່ນ 123456 ກະລຸນາລ໋ອກອິນອີກຄັ້ງ </h2>
-    <button class="btn btn-primary langlao" [routerLink]="['/login']">ກົດເພື່ອ ລ໋ອກອິນ</button>
+    <h5 class=" langlao display-6 text-center mb-3">ລະຫັດໃໝ່ຂອງທ່ານແມ່ນ <u><b>123456</b></u> ກະລຸນາລ໋ອກອິນອີກຄັ້ງ </h5>
+    <button class="text-center mx-auto d-block btn btn-primary langlao" [routerLink]="['/login']">ກົດເພື່ອ ລ໋ອກອິນ</button>
 </div>
