update and add some components

--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -19,3 +19,21 @@
         </div>
     </div>
 </div>
+
+<!-- the tag below make for alert  -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title text-center langlao">ສຳເລັດການປ່ຽນລະຫັດຜ່ານ</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ທ່ານໄດ້ປ່ຽນລະຫັດຜ່ານແລ້ວ ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
+        <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
+    </div>
+</ng-template>
