--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,6 +42,8 @@
                             <hr>
                             <button class="dropdown-item" type="button" id="head-drop-font" (click)="logout()"><i class="fas fa-level-down-alt"></i> Logout</button>
                             <hr>
+                            <button class="dropdown-item" type="button" id="head-drop-font" [routerLink]="['/modal']"><i class="fas fa-level-down-alt"></i> Modal</button>
+                            <hr>
                             <button class="dropdown-item" type="button" id="head-drop-font"><i class="far fa-address-book"></i> For Admin</button>
                         </div>
                     </li>
