--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,17 +5,17 @@
     <div class="row d-flex justify-content-center">
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/login']">
-                <a id="padding-item" class="nav-link main-bg-color text-center "><i class="fas fa-user"></i> Sign In</a>
+                <a id="padding-item" class="nav-link main-bg-color text-center "><i class="fas fa-user"></i> <br> <span class="langlao">ເຂົ້າສູ່ລະບົບ</span></a>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/register'] ">
-                <i id="padding-item " class="nav-link main-bg-color text-center"><i class="far fa-registered"></i> Register</i>
+                <a id="padding-item " class="nav-link main-bg-color text-center"><i class="far fa-registered"></i><br> <span class="langlao">ລົງທະບຽນ</span></a>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="['/forgotpassword']">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-key" id="font-item"></i><br>Forgot-Password</i>
+                <a id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-key" id="font-item"></i><br> <span class="langlao">ລືມລະຫັດຜ່ານ</span></a>
             </div>
         </div>
         <!-- *********************************** -->
