--- a/src/app/all-menu/all-menu.component.html
+++ b/src/app/all-menu/all-menu.component.html
@@ -5,17 +5,17 @@
     <div class="row d-flex justify-content-between">
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/hometopup']">
-                <a id="padding-item" class="nav-link main-bg-color text-center "><i class="fas fa-mobile-alt "></i><br><i>Top-up</i></a>
+                <a id="padding-item" class="nav-link main-bg-color text-center "><i class="fas fa-mobile-alt "></i><br><i class="langlao">ເຕີມເງີນ</i></a>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/ubalance'] ">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-money-bill-alt"></i><br><i>User-Banlace</i></i>
+                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-money-bill-alt"></i><br><i class="langlao">ກວດສອບມູນຄ່າໂທ</i></i>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/user-info']">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-user-circle"></i><br><i>User-info</i></i>
+                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="far fa-user-circle"></i><br><i class="langlao">ຂໍ້ມູນສ່ວນຕົວ</i></i>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
@@ -59,12 +59,12 @@
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/changepassword']">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fab fa-expeditedssl" id="font-item"></i><br><i>Change-Password</i></i>
+                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fab fa-expeditedssl" id="font-item"></i><br><i class="langlao">ປ່ຽນລະຫັດຜ່ານ</i></i>
             </div>
         </div>
         <div class="font-size-items col-xl-3 col-lg-3 col-md-4 col-6 mt-10">
             <div class="main-bg-color d-flex justify-content-center align-items-center cursor" [routerLink]="[ '/change-phone']">
-                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-mobile-alt" id="font-item"></i><br><i>Change-Phone</i></i>
+                <i id="padding-item " class="nav-link main-bg-color text-center  "><i class="fas fa-mobile-alt" id="font-item"></i><br><i class="langlao">ປ່ຽນເບີໂທລະສັບ</i></i>
             </div>
         </div>
     </div>
