--- a/src/app/change-phone/change-phone.component.html
+++ b/src/app/change-phone/change-phone.component.html
@@ -13,10 +13,29 @@
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="secret">ປ້ອນລະຫັດທີ່ທ່ານໃດ້ຮັບ*</label>
                 <input name="secret" [value]="_newUser.data['secret']===undefined? '' : _newUser.data['secret']" (input)="_newUser.data['secret']=$event.target.value" (keyup)="checkSMSConfirm($event)" maxlength="6" placeholder="secret" class="form-control input-md" required>
                 <label class="mt-3 langlao smoke-font-color" for="secret"></label>
-                <button (click)="getSMSConfirm()" name="btnGetSecret" class="btn btn-outline-secondary mt-3">Get secret</button>
+                <button (click)="getSMSConfirm()" name="btnGetSecret" class="btn btn-outline-secondary mt-3 langlao">ຂໍລະຫັດ</button>
                 <label for="submit"></label>
                 <button (click)='changePhoneNumber()' name="submit" class="btn btn-block main-bg-color mt-3">Submit</button>
             </form>
         </div>
     </div>
 </div>
+
+
+<!-- the tag below make for alert  -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="text-center modal-title langlao">ປ່ຽນເບີໂທສຳເລັດ</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ທ່ານໄດ້ປ່ຽນເບີໂທສຳເລັດແລ້ວ ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
+        <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
+    </div>
+</ng-template>
