--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -19,3 +19,40 @@
         </div>
     </div>
 </div>
+
+<!-- the tag below make for alert reset password -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h5 class="modal-title langlao"><b class="text-center">ສຳເລັດການກູ້ຄືນລະຫັດຜ່ານ</b></h5>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ລະຫັດຜ່ານຂອງທ່ານແມ່ນ: <u><b>123456</b></u> ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
+        <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
+    </div>
+</ng-template>
+
+
+<!-- the tag below make for alert key empty -->
+
+<ng-template #keyempty let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h5 class="modal-title langlao"><b class="text-center"></b></h5>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ກະລຸນາ ໃສ່ເບີໂທຂອງທ່ານ</p>
+        <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
+    </div>
+</ng-template>
