--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -6,24 +6,35 @@
             <form action="">
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="Username">ຊື່ແລະນາມສະກຸນ*</label>
                 <input name="username" [ngModel]='_currentUserdetail.username' type="text" placeholder="ກຳລັງດຳເນີນການ..." class="form-control langlao" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="phone">ເບີໂທລະສັບ* </label>
                 <input name="phone" [ngModel]='_currentUserdetail.phonenumber' placeholder="ກຳລັງດຳເນີນການ..." class="form-control langlao" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="addgith">ຈຳນວນເງິນທີ່ເຕີມ* </label>
                 <input name="gijvalue" [ngModel]='_currentUserdetail.gijvalue | number' type="text" placeholder="ກຳລັງດຳເນີນການ..." maxlength="10" class="form-control langlao" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="totalgijspent">ຈຳນວນເງິນທີ່ໃຊ້ແລ້ວ* </label>
                 <input name="totalgijspent" [ngModel]='_currentUserdetail.totalgijspent | number' type="text" placeholder="ກຳລັງດຳເນີນການ..." maxlength="10" class="form-control langlao" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="totalgij">ຈຳນວນເງິນທີ່ຍັງເຫຼືອ* </label>
                 <input name="totalgij" [ngModel]='_currentUserdetail.totalgij | number' type="text" maxlength="10" placeholder="ກຳລັງດຳເນີນການ..." class="form-control langlao" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="createddate">ວັນທີ ເດືອນ ປີ ສະໝັກ* </label>
                 <input name="createddate" [ngModel]='_currentUserdetail.createddate | date:"dd / MM / yy" ' type="text" placeholder="date and time" class="form-control" disabled>
+
                 <label class="ml-4 mt-3 langlao smoke-font-color" for="description">ຄຳອາທິບາຍ* </label>
                 <input name="description" [ngModel]='_currentUserdetail.description' (ngModelChange)="_currentUserdetail.description = $event" type="text" maxlength="200" placeholder="" class="form-control">
+
+                <div class="input-group d-flex justify-content-center">
+                    <button class="btn btn-success mr-5  mt-3 langlao" (click)="getUserDetails()"> ໂຫລດຂໍ້ມູນ</button>
+                    <button class="btn btn-primary  mt-3 pull-left langlao" (click)="updateUserDetails()"> ອັບເດດຂໍ້ມູນ</button>
+                </div>
             </form>
         </div>
     </div>
 
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12 border-register" style="width:100%;">
             <div>
                 <h1>
@@ -36,6 +47,6 @@
                 <button (click)="updateUserDetails()"> update details</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
 </div>
