Update HTML tag and rearrenge

--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -30,7 +30,7 @@
     </button>
     </div>
     <div class="modal-body">
-        <p class="text-center langlao">ລະຫັດຜ່ານຂອງທ່ານແມ່ນ: <u><b>123456</b></u> ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
+        <p class="text-center langlao">ລະຫັດຜ່ານຂອງທ່ານແມ່ນ: <u><b><mark>123456</mark></b></u> ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
         <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
     </div>
     <div class="modal-footer">
