--- a/src/app/change-phone/change-phone.component.html
+++ b/src/app/change-phone/change-phone.component.html
@@ -39,3 +39,21 @@
         <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
     </div>
 </ng-template>
+
+<!-- the tag below make for show_sms  -->
+
+<ng-template #show_sms let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="text-center modal-title langlao"></h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ກະລຸນາປ້ອນເບີໂທລະສັບຂອງທ່ານ&hellip;</p>
+        <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')">ຕົກລົງ</button>
+    </div>
+</ng-template>
