--- a/src/app/forgotpassword/forgotpassword.component.css
+++ b/src/app/forgotpassword/forgotpassword.component.css
@@ -4,3 +4,7 @@
     border-right: none;
     border-radius: 0px 20px 20px 0px;
 }
+
+mark {
+    background: linear-gradient(to right, rgb(230, 26, 196), rgb(185, 8, 185)) !important;
+}
