--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -33,19 +33,17 @@
     </div>
 </div>
 
-<button class="btn btn-success" (click)="showclient(content)">Modal</button>
-
 <!-- the tag below make for alert  -->
 
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
-        <h4 class="modal-title text-center langlao">ປ່ຽນລະຫັດຜ່ານ</h4>
+        <h4 class="modal-title text-center langlao">ລົງທະບຽນ</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
     </div>
     <div class="modal-body">
-        <p class="text-center langlao">ສຳເລັດການລົງທະບຽນ ກະລຸນາລ໋ອກອິນອີກຄັ້ງ&hellip;</p>
+        <p class="text-center langlao">ສຳເລັດການລົງທະບຽນ ກະລຸນາເຂົ້າສູ່ລະບົບອີກຄັ້ງ&hellip;</p>
         <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
     </div>
     <div class="modal-footer">
