--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -26,27 +26,27 @@
                 <input name="description" [ngModel]='_currentUserdetail.description' (ngModelChange)="_currentUserdetail.description = $event" type="text" maxlength="200" placeholder="" class="form-control">
 
                 <div class="input-group d-flex justify-content-center">
-                    <button class="btn btn-success mr-5  mt-3 langlao" (click)="getUserDetails()"> ໂຫລດຂໍ້ມູນ</button>
-                    <button class="btn btn-primary  mt-3 pull-left langlao" (click)="updateUserDetails()"> ອັບເດດຂໍ້ມູນ</button>
+                    <button class="btn main-bg-color mr-5  mt-3 langlao" (click)="getUserDetails()"> ໂຫລດຂໍ້ມູນ</button>
+                    <button class="btn main-bg-color-right  mt-3 pull-left langlao" (click)="updateUserDetails()"> ອັບເດດຂໍ້ມູນ</button>
                 </div>
             </form>
         </div>
     </div>
-
-
-    <!-- <div class="row">
-        <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12 border-register" style="width:100%;">
-            <div>
-                <h1>
-                    Get user details
-                </h1>
-                <textarea cols="60" rows="9" [(ngModel)]="_userDetailsStr">                  
-                </textarea>
-                <br/>
-                <button (click)="getUserDetails()"> get user details</button>
-                <button (click)="updateUserDetails()"> update details</button>
-            </div>
-        </div>
-    </div> -->
-
 </div>
+
+<!-- the tag below make for Show_update_details -->
+
+<ng-template #Alert_update_details let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h5 class="modal-title langlao"><b class="text-center">ອັບເດດໂປຣຟາຍລ໌</b></h5>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="modal-body">
+        <p class="text-center langlao">ອັບເດດໂປຣຟາຍລ໌ສຳເລັດ</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-light langlao" (click)="c('Close click')" [routerLink]="[ '/user-info']">ຕົກລົງ</button>
+    </div>
+</ng-template>
