--- a/src/app/all-menu/all-menu.component.css
+++ b/src/app/all-menu/all-menu.component.css
@@ -1,5 +1,5 @@
 .font-size-items {
-    font-size: 13pt;
+    font-size: 12pt;
 }
 
 .mt-10 {
@@ -9,47 +9,19 @@
 .cursor {
     cursor: pointer;
     height: 180px;
-    border: 10px solid;
+    border: 4px solid;
     border-color: rgb(212, 198, 198);
     border-radius: 30px 0px 50px 0px;
 }
 
 .font-size-items:hover {
-    transition: 0.5s;
+    transition: 0.6s;
     font-size: 12pt;
     color: black !important;
 }
 
 .nav-link:hover {
-    transition: 0.5s;
+    transition: 0.6s;
+    font-size: 13pt !important;
     color: black !important;
 }
-
-
-/* #menu-item {
-    width: 240px;
-    height: auto;
-    align-items: center;
-}
-
-#menu-item,
-ul,
-li,
-a:hover {
-    font-size: 14px;
-    transition: 0.5s;
-    color: black !important;
-}
-
-ul li {
-    margin-top: 30px;
-    margin-right: 15px;
-}
-
-.paading-item {
-    padding: 30px;
-}
-
-#font-item {
-    font-size: 22pt;
-} */
