update and add function upload photo

--- a/src/app/change-phone/change-phone.component.html
+++ b/src/app/change-phone/change-phone.component.html
@@ -50,7 +50,8 @@
     </button>
     </div>
     <div class="modal-body">
-        <p class="text-center langlao">ກະລຸນາປ້ອນເບີໂທລະສັບຂອງທ່ານ&hellip;</p>
+        <p class="text-center langlao">ກະລຸນາປ້ອນເບີໂທລະສັບໃຫ້ຄົບຖ້ວນ</p>
+        <p class="text-center langlao">ຕົວຢ່າງ: 20xxxxxxxx</p>
         <p class="text-center langlao">ຂໍຂອບໃຈ&hellip;</p>
     </div>
     <div class="modal-footer">
