--- a/src/app/ubalance/ubalance.component.html
+++ b/src/app/ubalance/ubalance.component.html
@@ -1,4 +1,12 @@
 <div class="container border-register">
+    <ngx-loading [show]="loading" [config]="{ 
+            backdropBorderRadius: '14px',fullScreenBackdrop:true,
+            backdropBackgroundColour: 'rgb(240, 77, 213, 0.377)',
+            primaryColour: '#ffffff', secondaryColour: '#ffffff', tertiaryColour: '#ffffff' 
+        }">
+        0000000000000
+    </ngx-loading>
+
     <h3 class="text-center display-7 mb-4">Pay Cheap <i class="fas fa-leaf" id="register-color-icon"></i></h3>
     <h1 class=" langlao display-5 text-center">User-Balance</h1>
     <div class="div d-flex justify-content-center">
