--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,4 +1,12 @@
 <div class="container">
+    <ngx-loading [show]="loading" [config]="{ 
+        backdropBorderRadius: '14px',fullScreenBackdrop:true,
+        backdropBackgroundColour: 'rgb(240, 77, 213, 0.377)',
+        primaryColour: '#ffffff', secondaryColour: '#ffffff', tertiaryColour: '#ffffff' 
+    }">
+        <!-- put something that you want to show here -->
+    </ngx-loading>
+
     <div class="row">
         <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12 border-register" style="width:100%;">
             <h3 class="text-center display-7">Pay Cheap <i class="fas fa-leaf" id="register-color-icon"></i></h3>
@@ -58,6 +66,8 @@
         </div>
     </div>
 </div>
+
+<button class="btn btn-warning d-block mx-auto" (click)="logout()">Logout</button>
 
 <!-- the tag below make for Show_update_details -->
 
